--- a/index.html
+++ b/index.html
@@ -782,7 +782,7 @@
                 </li>
               </ol>
             </li>
-            <li>If [=subscription=] is null, then resolve |promise| with null.
+            <li>If |subscription| is null, then resolve |promise| with null.
             </li>
             <li>If there is an error with |subscription|, reject |promise| with a {{DOMException}}
             whose name is {{"AbortError"}} and terminate these steps.
