Meta: address xref issue
Apparently ReSpec does not support this.

--- a/index.html
+++ b/index.html
@@ -996,8 +996,8 @@
         creation of the {{ArrayBuffer}} object are re-thrown.
       </p>
       <p data-cite="encoding">
-        The <dfn>json()</dfn> method steps are to return the result of <a>parsing JSON bytes to a
-        JavaScript value</a> given [=this=]'s [=bytes=].
+        The <dfn>json()</dfn> method steps are to return the result of [=parse JSON bytes to a
+        JavaScript value|parsing JSON bytes to a JavaScript value=] given [=this=]'s [=bytes=].
       </p>
       <p data-cite="encoding">
         The <dfn>text()</dfn> method steps are to return the result of running <a>UTF-8 decode</a>
