--- a/index.html
+++ b/index.html
@@ -187,11 +187,11 @@
           {
             "web_push": 8030,
             "notification": {
-              "title": "Watch the new season of Return of the Example now!",
+              "title": "Ada emailed ‘London’",
               "lang": "en-US",
               "dir": "ltr",
-              "body": "The examples are going to great lengths once more.",
-              "url": "https://tv.example/return"
+              "body": "Did you hear about the tube strikes?",
+              "navigate": "https://email.example/message/12"
             }
           }
         </pre>
