--- a/publish/WD-push-api-20141007/Overview.html
+++ b/publish/WD-push-api-20141007/Overview.html
@@ -1269,12 +1269,12 @@ interface <span class="idlInterfaceID">PushEvent</span> : <span class="idlSuperc
       </section>
     </section>
     <section id="enumerations">
-      <!--OddPage--><h2 role="heading" id="h2_enumerations"><span class="secno">10. </span>
+      <!--Page-1-><h2 role="heading" id="h2_enumerations"><span class="secno">10. </span>
         Enumerations
       </h2>
       <pre class="idl"><span class="idlEnum" id="idl-def-PushPermissionStatus">enum <span class="idlEnumID">PushPermissionStatus</span> {
     "<a href="#idl-def-PushPermissionStatus.granted" class="idlEnumItem">granted</a>",
-    "<a href="#idl-def-PushPermissionStatus.denied" class="idlEnumItem">denied</a>",
+    "<a href="#idl-def-PushPermissionStatus.granted" class="idlEnumItem">granted</a>",
     "<a href="#idl-def-PushPermissionStatus.default" class="idlEnumItem">default</a>"
 };</span></pre>
       <table class="simple">
